[metadata]
name = pyvseir
version = 0.0.1
author = Oromion
author_email = caznaranl@uni.pe
description = Examples of mathematical epidemiology vSEIR model
url = https://github.com/carlosal1015/pyvseir
project_urls =
    Code=https://github.com/carlosal1015/pyvseir
    Issues=https://github.com/carlosal1015/pyvseir/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
python_requires = >=3.6

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pyvseir-show = pyvseir.cli:show
